--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="login-container">
     <h2>테스트</h2>
-    <input id="username" placeholder="Enter send man" />
+    <input id="username" placeholder="닉" />
     <input id="room" placeholder="방 이름" />
     <button id="join-room">채팅방 생성/들어가기</button>
     <h3>생성된 방들</h3>
